option java_package = "mil.nga.giat.geowave.datastore.hbase.coprocessors.protobuf";
option java_outer_classname = "SharedDataProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message SharedDataRequest {
  required string key = 1;
  optional string value = 2;
}

message SharedDataResponse {
  required string value = 1;
}

service SharedDataService {
  rpc share(SharedDataRequest)
    returns (SharedDataResponse);
}